// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Async Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover,
.emotion-2:focus {
  background-color: #181f55;
}

.emotion-2:active {
  background-color: #0d102d;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #ffc700;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover,
.emotion-5:focus {
  background-color: #cc9f00;
}

.emotion-5:active {
  background-color: #970;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  font-size: 1rem;
  font-weight: 500;
  color: #000;
  background-color: #ffc700;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-9:hover,
.emotion-9:focus {
  background-color: #cc9f00;
}

.emotion-9:active {
  background-color: #970;
}

.emotion-13 {
  font-size: 1rem;
  font-weight: 500;
  color: #000;
  background-color: #ffc700;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-13:hover,
.emotion-13:focus {
  background-color: #cc9f00;
}

.emotion-13:active {
  background-color: #970;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Sync Action
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Async sm
          </span>
        </span>
      </button>
      <div
        className="emotion-8"
      >
        <div>
          Button inner text from event: 
          
        </div>
        <div>
          Fake response: 
          
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-9"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Async md
          </span>
        </span>
      </button>
      <div
        className="emotion-8"
      >
        <div>
          Button inner text from event: 
          
        </div>
        <div>
          Fake response: 
          
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-13"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Async lg
          </span>
        </span>
      </button>
      <div
        className="emotion-8"
      >
        <div>
          Button inner text from event: 
          
        </div>
        <div>
          Fake response: 
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Block Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  width: 100%;
  color: #fff;
  background-color: #232d7d;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover,
.emotion-2:focus {
  background-color: #181f55;
}

.emotion-2:active {
  background-color: #0d102d;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-size: 1rem;
  font-weight: 500;
  width: 100%;
  color: #232d7d;
  background-color: transparent;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(35,45,125,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-7:hover,
.emotion-7:focus {
  background-color: rgba(35,45,125,0.1);
}

.emotion-7:active {
  background-color: rgba(35,45,125,0.2);
}

.emotion-9 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  width: 100%;
  color: #6bbc15;
  background-color: transparent;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-10:hover,
.emotion-10:focus {
  background-color: rgba(107,188,21,0.1);
}

.emotion-10:active {
  background-color: rgba(107,188,21,0.2);
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-5"
          >
            Hello world
          </span>
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-7"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-9"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-10"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-9"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #d40000;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 0.5;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #6a0000;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover,
.emotion-5:focus {
  background-color: #9d0000;
}

.emotion-5:active {
  background-color: #d00000;
}

.emotion-8 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #e88eba;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover,
.emotion-8:focus {
  background-color: #df64a0;
}

.emotion-8:active {
  background-color: #d73986;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Red 600
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Magenta 200
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover,
.emotion-2:focus {
  background-color: #181f55;
}

.emotion-2:active {
  background-color: #0d102d;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover,
.emotion-5:focus {
  background-color: #181f55;
}

.emotion-5:active {
  background-color: #0d102d;
}

.emotion-8 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover,
.emotion-8:focus {
  background-color: #181f55;
}

.emotion-8:active {
  background-color: #0d102d;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #6bbc15;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 0.5;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #6bbc15;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover,
.emotion-5:focus {
  background-color: #518e10;
}

.emotion-5:active {
  background-color: #37600b;
}

.emotion-8 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #d40000;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover,
.emotion-8:focus {
  background-color: #a10000;
}

.emotion-8:active {
  background-color: #6e0000;
}

.emotion-11 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-11:hover,
.emotion-11:focus {
  background-color: #181f55;
}

.emotion-11:active {
  background-color: #0d102d;
}

.emotion-14 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #f5781b;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-14:hover,
.emotion-14:focus {
  background-color: #d46009;
}

.emotion-14:active {
  background-color: #a34a07;
}

.emotion-17 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #232d7d;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-17:hover,
.emotion-17:focus {
  background-color: rgba(35,45,125,0.1);
}

.emotion-17:active {
  background-color: rgba(35,45,125,0.2);
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-11"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-14"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-17"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover,
.emotion-2:focus {
  background-color: #181f55;
}

.emotion-2:active {
  background-color: #0d102d;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-8 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-5"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-8"
          >
            Hello world
          </span>
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-13"
          >
            Hello world
          </span>
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #000;
  background-color: #ffc700;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #cc9f00;
}

.emotion-1:active {
  background-color: #970;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        change me!
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover,
.emotion-2:focus {
  background-color: #181f55;
}

.emotion-2:active {
  background-color: #0d102d;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-6 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #181f55;
}

.emotion-6:active {
  background-color: #0d102d;
}

.emotion-10 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-10:hover,
.emotion-10:focus {
  background-color: #181f55;
}

.emotion-10:active {
  background-color: #0d102d;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button-size-lg"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-5"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-6"
        data-testid="button-size-md"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-5"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-10"
        data-testid="button-size-sm"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-5"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #232d7d;
  background-color: transparent;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(35,45,125,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: rgba(35,45,125,0.1);
}

.emotion-1:active {
  background-color: rgba(35,45,125,0.2);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #232d7d;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: #181f55;
}

.emotion-1:active {
  background-color: #0d102d;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Transparent Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #6bbc15;
  background-color: transparent;
  padding: 1rem 1.5rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover,
.emotion-1:focus {
  background-color: rgba(107,188,21,0.1);
}

.emotion-1:active {
  background-color: rgba(107,188,21,0.2);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;
